--- a/BrowserCalls.Web/packages.config
+++ b/BrowserCalls.Web/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="JWT" version="1.3.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
@@ -14,5 +15,10 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="RestSharp" version="105.2.2" targetFramework="net45" />
+  <package id="Twilio" version="4.1.0" targetFramework="net45" />
+  <package id="Twilio.Client" version="3.4.4" targetFramework="net45" />
+  <package id="Twilio.Mvc" version="3.1.15" targetFramework="net45" />
+  <package id="Twilio.TwiML" version="3.4.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
