--- a/BrowserCalls.Web.Test/BrowserCalls.Web.Test.csproj
+++ b/BrowserCalls.Web.Test/BrowserCalls.Web.Test.csproj
@@ -93,7 +93,9 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Controllers\ControllerTest.cs" />
+    <Compile Include="Controllers\DashboardControllerTest.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="Controllers\MockHttpContext.cs" />
     <Compile Include="Controllers\TokenControllerTest.cs" />
     <Compile Include="Domain\Twilio\CapabilityTest.cs" />
     <Compile Include="Model\InMemoryTicketsRepository.cs" />
