Add reference to browser-calls.js

--- a/BrowserCalls.Web/BrowserCalls.Web.csproj
+++ b/BrowserCalls.Web/BrowserCalls.Web.csproj
@@ -165,6 +165,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\browser-calls.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
