--- a/BrowserCalls.Web/Web.config.sample
+++ b/BrowserCalls.Web/Web.config.sample
@@ -16,6 +16,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="TwilioAccountSid" value="TWILIO_ACCOUNT_SID" />
+    <add key="TwilioAuthToken" value="TWILIO_AUTH_TOKEN" />
+    <add key="TwiMLApplicationSid" value="TWIML_APPLICATION_SID" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
