Add Call controller

--- a/BrowserCalls.Web.Test/BrowserCalls.Web.Test.csproj
+++ b/BrowserCalls.Web.Test/BrowserCalls.Web.Test.csproj
@@ -78,6 +78,9 @@
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.2\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
+    <Reference Include="Twilio.Mvc">
+      <HintPath>..\packages\Twilio.Mvc.3.1.15\lib\3.5\Twilio.Mvc.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -92,6 +95,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Controllers\CallControllerTest.cs" />
     <Compile Include="Controllers\ControllerTest.cs" />
     <Compile Include="Controllers\DashboardControllerTest.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
