--- a/BrowserCalls.Web/Web.config.sample
+++ b/BrowserCalls.Web/Web.config.sample
@@ -19,6 +19,7 @@
     <add key="TwilioAccountSid" value="TWILIO_ACCOUNT_SID" />
     <add key="TwilioAuthToken" value="TWILIO_AUTH_TOKEN" />
     <add key="TwiMLApplicationSid" value="TWIML_APPLICATION_SID" />
+    <add key="TwilioPhoneNumber" value="TWILIO_PHONE_NUMBER" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
