Add confirmation message for ticket creation

--- a/BrowserCalls.Web/BrowserCalls.Web.csproj
+++ b/BrowserCalls.Web/BrowserCalls.Web.csproj
@@ -192,6 +192,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <None Include="Views\Dashboard\Index.cshtml" />
+    <Content Include="Views\Shared\_Messages.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
