Fix brittleness issue, resolves #4 and closes #5

--- a/BrowserCalls.Web.Test/BrowserCalls.Web.Test.csproj
+++ b/BrowserCalls.Web.Test/BrowserCalls.Web.Test.csproj
@@ -98,7 +98,7 @@
     <Compile Include="Controllers\CallControllerTest.cs" />
     <Compile Include="Controllers\ControllerTest.cs" />
     <Compile Include="Controllers\DashboardControllerTest.cs" />
-    <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="Controllers\TicketsControllerTest.cs" />
     <Compile Include="Controllers\MockHttpContext.cs" />
     <Compile Include="Controllers\TokenControllerTest.cs" />
     <Compile Include="Domain\Twilio\CapabilityTest.cs" />
