--- a/BrowserCalls.Web.Test/packages.config
+++ b/BrowserCalls.Web.Test/packages.config
@@ -1,19 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.0.0" targetFramework="net451" />
-  <package id="JWT" version="1.3.4" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
-  <package id="Microsoft.IdentityModel.Logging" version="1.1.3" targetFramework="net451" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.1.3" targetFramework="net451" />
+  <package id="Castle.Core" version="4.4.0" targetFramework="net472" />
+  <package id="JWT" version="5.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.5.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Moq" version="4.7.1" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="NUnit" version="3.6.1" targetFramework="net451" />
-  <package id="Portable.BouncyCastle" version="1.8.1.2" targetFramework="net451" />
+  <package id="Moq" version="4.13.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="NUnit" version="3.12.0" targetFramework="net472" />
+  <package id="NUnit3TestAdapter" version="3.15.1" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="Portable.JWT" version="1.0.5" targetFramework="net45" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.3" targetFramework="net451" />
-  <package id="Twilio" version="5.1.0" targetFramework="net451" />
-  <package id="Twilio.AspNet.Mvc" version="5.0.1" targetFramework="net451" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net472" />
+  <package id="Twilio" version="5.32.0" targetFramework="net472" />
+  <package id="Twilio.AspNet.Common" version="5.20.1" targetFramework="net472" />
+  <package id="Twilio.AspNet.Mvc" version="5.20.1" targetFramework="net472" />
 </packages>
