--- a/BrowserCalls.Web/packages.config
+++ b/BrowserCalls.Web/packages.config
@@ -1,27 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net45" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="jQuery" version="1.10.2" targetFramework="net45" />
-  <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
-  <package id="JWT" version="1.3.4" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
+  <package id="bootstrap" version="4.3.1" targetFramework="net472" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="jQuery" version="3.4.1" targetFramework="net472" />
+  <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
+  <package id="JWT" version="5.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
-  <package id="Microsoft.IdentityModel.Logging" version="1.1.3" targetFramework="net451" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.1.3" targetFramework="net451" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.5.0" targetFramework="net472" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="Portable.BouncyCastle" version="1.8.1.2" targetFramework="net451" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="popper.js" version="1.14.3" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="Portable.JWT" version="1.0.5" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net451" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.3" targetFramework="net451" />
-  <package id="Twilio" version="5.1.0" targetFramework="net451" />
-  <package id="Twilio.AspNet.Mvc" version="5.0.1" targetFramework="net451" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
+  <package id="RestSharp" version="106.6.10" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net472" />
+  <package id="Twilio" version="5.32.0" targetFramework="net472" />
+  <package id="Twilio.AspNet.Common" version="5.20.1" targetFramework="net472" />
+  <package id="Twilio.AspNet.Mvc" version="5.20.1" targetFramework="net472" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
